Make Findbugs happier
git-svn-id: https://gwt-dnd.googlecode.com/svn/trunk@708 c7e6bd1f-9827-0410-b8b9-973c5d279602